# SquidBook

./: README.md  package-lock.json
squid_back/: .account_book.db  go.mod  go.sum  main.go
squid_front/: Splatoon.vue  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
squid_front/src/: App.vue  main.ts  shims-vue.d.ts  style.css
squid_front/src-tauri/: .account_book.db  2  Cargo.toml  app.db  tauri.conf.json
squid_front/src-tauri/capabilities/: default.json
squid_front/src-tauri/icons/: Squid.png~  icon.icns
squid_front/src-tauri/src/: backend.rs  lib.rs
squid_front/src/api/: accountApi.ts
squid_front/src/components/: AddWindow.vue  EditWindow.vue  ExpenseChart.vue  FooterNav.vue  InkSpot.vue  Item.vue
squid_front/src/router/: index.ts
squid_front/src/types/: account.ts
squid_front/src/utils/: dateUtil.ts
squid_front/src/views/: ExpensePage.vue  Home.vue  Monthly.vue  Settings.vue
