[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.4", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
chrono = "0.4.41"
once_cell = "1.21.3"
lazy_static = "1.5.0"
thiserror = "2.0.16"
